submissions belong to user, require login

--- a/app/views/dashboards/frontpage.html.haml
+++ b/app/views/dashboards/frontpage.html.haml
@@ -1,3 +1,6 @@
-= link_to 'new submission', new_submission_path
+= render "users/brief"
+
+- if current_user
+  = link_to 'new submission', new_submission_path
 
 = render partial: "submissions/submission", collection: @submissions
