--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -1,4 +1,3 @@
 - presents :submission, @submission do |s|
   .submission
-    = s.title
-    = s.body
+    = render :partial => "submissions/submission", :object => @submission
