--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <h1><%= link_to "Rinternal", root_url %></h1>
-
+<div id="container">
+<h1><%= link_to "Rinternal", root_url %></h1>
 <%= yield %>
+</div>
 
 </body>
 </html>
