url type forces it to be required

--- a/app/views/submissions/new.html.haml
+++ b/app/views/submissions/new.html.haml
@@ -2,7 +2,7 @@
   = f.input :title
   = f.input :type, collection: @submission.types, as: :radio
 
-  = f.input :url
+  = f.input :url, as: :string
   = f.input :text, as: :text
 
   = f.button :submit
